<resources>
    <string name="app_name">Trips</string>
    <string name="findTrips">Искать рейсы</string>
    <string name="allTrips">Все рейсы</string>
    <string name="addTrip">Добавить рейс</string>
    <string name="editTrip">Изменить рейс</string>


    <string name="numberTrip">Номер рейса:</string>
    <string name="busTypeTrip">Тип автобуса:</string>
    <string name="destinationTrip">Пункт назначения:</string>
    <string name="arrivalTrip">Время отправления:</string>

    <string name="basic">Обычная</string>
    <string name="high">Скоростная</string>
    <string name="official">Служебная</string>

</resources>